--- a/css/styles.css
+++ b/css/styles.css
@@ -107,9 +107,18 @@ img.pequeña{
     justify-content: space-around;
 }
 
-img.pequeña{width: 50px; height: 50px;}
-img.mediana{width: 100px; height: 100px;}
-img.grande{width: 200px; height: 200px;}
+img.mail{
+    width: 50px;
+    height: 50px;
+}
+img.gato{
+    width: 50px;
+    height: 50px;
+}
+img.linked{
+    width: 50px;
+    height: 50px;
+}
 
 footer{
     background-color: #af599e;
