--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ ul.horizontal li{
 *  el margin: auto; para tenerlo centrado fácilmente ;)
 */
 main {
-    max-width: 1200px;
+    max-width: 95%;
     margin: auto;
 }
 
