--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,8 @@ body {
     background-color: #fbfbfb;
     text-align: center;
     line-height: 1.2;
+    max-width: 95%;
+    margin: auto;
 }
 
 h1{
